# cloud-hypervisor

./: .gitignore  BUILD  MODULE.bazel  bazel-bin  bazel-out  bazel-src  bazel-testlogs
api_client/: BUILD
arch/: BUILD
block/: BUILD
devices/: BUILD
event_monitor/: BUILD
hypervisor/: BUILD
net_gen/: BUILD
net_util/: BUILD
option_parser/: BUILD
pci/: BUILD
performance-metrics/: BUILD
rate_limiter/: BUILD
serial_buffer/: BUILD
src/: lib.rs  main.rs
test_infra/: BUILD
tpm/: BUILD
tracer/: BUILD
virtio-devices/: BUILD
vm-allocator/: BUILD
vm-device/: BUILD
vm-migration/: BUILD
vm-virtio/: BUILD
vmm/: BUILD
